testsuite/tests/typecheck/should_fail/T16512a.stderr

T16512a.hs:41:25: error: [GHC-25897]
    • Couldn't match type ‘b’ with ‘a -> b’
      Expected: AST (ListVariadic (a : as) b)
        Actual: AST (ListVariadic as (a -> b))
      ‘b’ is a rigid type variable bound by
        the type signature for:
          unapply :: forall b. AST b -> AnApplication b
        at T16512a.hs:37:1-35
    • In the first argument of ‘AnApplication’, namely ‘g’
      In the expression: AnApplication g (a `ConsAST` as)
      In a case alternative:
          AnApplication g as -> AnApplication g (a `ConsAST` as)
    • Relevant bindings include
        g :: AST (ListVariadic as (a -> b)) (bound at T16512a.hs:40:23)
        a :: AST a (bound at T16512a.hs:38:15)
        f :: AST (a -> b) (bound at T16512a.hs:38:10)
        unapply :: AST b -> AnApplication b (bound at T16512a.hs:38:1)
